# intmax-rollup-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.env  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: for_ubuntu.md  interface_guide.md
src/: lib.rs  main.rs
src/cache/: block_header.rs
src/controller/: mod.rs
src/service/: airdrop.rs  builder.rs  ethereum.rs  functions.rs  interoperability.rs  mod.rs  prompt.rs
src/utils/: mod.rs  version.rs
src/utils/key_management/: memory.rs  mod.rs  types.rs
src/utils/nickname/: mod.rs
tests/airdrop/: README.md  example.csv  example2.csv  example3.csv  example4.csv  example5.csv  example6.csv  example7.csv
