[package]
name = "intmax"
version = "2.0.2-alpha"
edition = "2021"

[dependencies]
anyhow = "1.0"
ctrlc = "3.2"
dirs = "4.0"
dotenv = "0.15"
hex = "0.4"
intmax-rollup-interface = { git = "https://github.com/InternetMaximalism/intmax-rollup-interface", rev = "5d71b62" }
intmax-interoperability-plugin = { path = "./packages/intmax-interoperability-plugin" }
num-bigint = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.18", features = ["macros"] }
curl = "0.4.44"

[features]
default = ["parallel", "interoperability"]
verbose = []
parallel = ["intmax-rollup-interface/parallel"]
interoperability = []
bridge = []
